--- a/src/Components/EventItem/EventItem.css
+++ b/src/Components/EventItem/EventItem.css
@@ -14,7 +14,7 @@
     background: #000;
     position: absolute;
     z-index: 10;
-    opacity: 0.2;
+    opacity: 0.5;
     border-radius: 10px;
 }
 
@@ -25,6 +25,13 @@
     font-weight: 700;
     left: 20px;
     bottom: 10px;
+}
+
+.event_item_content p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 3px;
 }
 
 .event_item_booking_btn {
